Started layout changes in home page

--- a/home.html
+++ b/home.html
@@ -46,8 +46,8 @@
 </head>
 <body>
     <link rel="stylesheet" href="CSS/style.css">
-    <div class="col-container">
-        <div class="col">
+    <div class="row">
+        <div class="col" id="leftCol">
             <h1>Hi there!</h1>
             <h3>Login to acces your account. Don't have an account yet? Sign up for free</h3>
             <input type="text" id="opt" placeholder="Type here">
@@ -55,9 +55,10 @@
             <br><br>
             <button id ="login" class="btn login">Sign in</button>
             <button id = "register" class="btn register">Sign up</button>
-            <button id ="view" class="btn view">View account details</button></div>
+            <button id ="view" class="btn view">View account details</button>
+        </div> 
+        <div class="col" id="walpaper"></div>
     </div>
-    <div class="col"></div>
     <!-- <H1>To access options type in a search bar or press a button</H1> -->
     <script src="./logic.js"></script>
 </body>
