--- a/home.html
+++ b/home.html
@@ -5,59 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login program</title>
-    <!-- <style>
-        .btn {
-            border: 2px solid black;
-            background-color: white;
-            color: black;
-            padding: 14px 28px;
-            font-size: 16px;
-            cursor: pointer;
-        }
-        .login{
-            border-color: #04AA6D;
-            color: green;
-        }
-
-        .login:hover {
-            background-color: #04AA6D;
-            color: white;
-        }
-        .register{
-            border-color: #f44336;
-            color: red;
-        }
-
-        .register:hover {
-            background: #f44336;
-            color: white;
-        }
-        .view{
-            border-color: #2196F3;
-            color: dodgerblue;
-        }
-
-        .view:hover {
-            background: #2196F3;
-            color: white;
-        }
-
-    </style> -->
 </head>
 <body>
-    <link rel="stylesheet" href="CSS/style.css">
-    <div class="row">
-        <div class="col" id="leftCol">
+    <link rel="stylesheet" href="CSS/homeStyles.css">
+    <div class="row"> 
+        <!-- <div class="col" id="leftCol">  -->
             <h1>Hi there!</h1>
-            <h3>Login to acces your account. Don't have an account yet? Sign up for free</h3>
-            <input type="text" id="opt" placeholder="Type here">
-            <button id="go">Go</button>
-            <br><br>
-            <button id ="login" class="btn login">Sign in</button>
-            <button id = "register" class="btn register">Sign up</button>
-            <button id ="view" class="btn view">View account details</button>
-        </div> 
-        <div class="col" id="walpaper"></div>
+            <h3>Login to acces your account.<br>Don't have an account yet? Sign up for free</h3>
+           <!-- Przeniesc pole do wyszukiwania do view account details -->
+            <!-- <input type="text" id="searchValue" placeholder="Type here"> -->
+            <!-- <button id="go">Go</button> -->
+            <button id ="loginBtn" class="homeBtn">Sign in</button>
+            <button id = "registerBtn" class="homeBtn">Register</button>
+           <!-- Przenies view accoit details dla zalogowanych -->
+            <!-- <button id ="view" class="btn view">View account details</button> -->
+            <!-- </div>  -->
+        <!-- <div class="col" id="walpaper"></div> -->
     </div>
     <!-- <H1>To access options type in a search bar or press a button</H1> -->
     <script src="./logic.js"></script>
