Update JS for enerate screen

--- a/generate.html
+++ b/generate.html
@@ -7,10 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="genNum" class ="generate">Generate numbers</button>
-    <button id="grnLetters" class ="generate">Generate letters</button>
-    <button id="grnSymb" class ="generate">Generate symbols</button><br> 
-    <p id="demo"></p><br>
+    <button id="genNum" class ="generate">Generate numeric password</button>
+    <button id="genAlphanum" class ="generate">Generate alphanumeric password</button>
+    <!-- <button id="grnSymb" class ="generate">Generate symbols</button><br>  -->
+    <p id="generatedPassword"></p><br>
     <button id="register">Go back to registration</button>
     <script src="./logic.js"></script>
     
