Updated generate page layout

--- a/generate.html
+++ b/generate.html
@@ -7,12 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="genNum" class ="generate">Generate numeric password</button>
-    <button id="genAlphanum" class ="generate">Generate alphanumeric password</button>
-    <!-- <button id="grnSymb" class ="generate">Generate symbols</button><br>  -->
-    <p id="generatedPassword"></p><br>
-    <button id="register">Go back to registration</button>
+    <link rel="stylesheet" href="./CSS/generateStyles.css">
+    <div id="content">
+        <button id="genNum" class ="generate">Generate numeric password</button>
+        <button id="genAlphanum" class ="generate">Generate alphanumeric password</button>
+        <p id="generatedPassword"></p><br>
+        <button id="register" class ="generate">Go back to registration</button>
+    </div>
     <script src="./logic.js"></script>
-    
 </body>
 </html>
