Finished generate password page layout

--- a/generate.html
+++ b/generate.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Generate pssword page</title>
 </head>
 <body>
     <link rel="stylesheet" href="./CSS/generateStyles.css">
     <div id="content">
+        <h1>Password generator</h1>
+        <p>Generated password will be copied to your registration form once you press "Go back to registration" button.</p>
         <button id="genNum" class ="generate">Generate numeric password</button>
         <button id="genAlphanum" class ="generate">Generate alphanumeric password</button>
         <p id="generatedPassword"></p><br>
