--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     <div class="row"> 
         <!-- <div class="col" id="leftCol">  -->
             <h1>Hi there!</h1>
-            <h3>Login to acces your account.<br>Don't have an account yet? Sign up for free</h3>
+            <h3>Login to acces your account.<br>Don't have an account yet? Sign up for free.</h3>
            <!-- Przeniesc pole do wyszukiwania do view account details -->
             <!-- <input type="text" id="searchValue" placeholder="Type here"> -->
             <!-- <button id="go">Go</button> -->
