Updated layout for member page

--- a/memberHome.html
+++ b/memberHome.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <title>Member home</title>
 </head>
 <body>
-    <button id="show">Show all accounts</button>
-    <table id="tbl">
-        <tr>
-            <th>Name</th>
-            <th>Surname</th>
-        </tr>
-    </table>
+    <link rel="stylesheet" href="./CSS/memberStyles.css">
+    <div id="content">
+        <h1 id="greeting"></h1>
+        <button id="show">Show all accounts</button>
+        <table id="tbl">
+            <tr>
+                <th>Name</th>
+                <th>Surname</th>
+            </tr>
+        </table>
+    </div>
 </body>
 <script src="./logic.js"></script>
 </html>
