--- a/register.html
+++ b/register.html
@@ -16,7 +16,7 @@
         <label for="txtUName" class="registerLabel">Username</label><br>
         <input type="text" placeholder="Enter username" id="txtUName" class="inputField" required><br>
         <label for="password" class="registerLabel">Password</label><br>
-        <input type="text" placeholder="Enter Password" id="password" class="inputField" required><br>
+        <input type="password" placeholder="Enter Password" id="password" class="inputField" required><br>
         <br> 
         <button type="button" id="register" class="Btn">Register</button>
     </div>
